<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:id="@+id/inicio"
            android:icon="@drawable/logo"
            android:title="@string/inicio"/>
    </group>

    <item android:title="@string/insercion_de_datos">
        <menu>
            <item android:id="@+id/insertarPersonaje"
                android:icon="@drawable/logo"
                android:title="@string/insertar_personaje"/>
            <item android:id="@+id/insertarAfiliacion"
                android:icon="@drawable/logo"
                android:title="@string/insertar_afiliacion"/>
            <item android:id="@+id/insertarCiudad"
                android:icon="@drawable/logo"
                android:title="@string/insertar_ciudad"/>
            <item android:id="@+id/insertarDominio"
                android:icon="@drawable/logo"
                android:title="@string/insertar_dominio"/>
        </menu>
    </item>
    <item android:title="@string/listado_de_datos">
        <menu>
            <item android:id="@+id/listarPersonaje"
                android:icon="@drawable/logo"
                android:title="@string/listar_personaje"/>
            <item android:id="@+id/listarAfiliacion"
                android:icon="@drawable/logo"
                android:title="@string/listar_afiliacion"/>
            <item android:id="@+id/listarCiudad"
                android:icon="@drawable/logo"
                android:title="@string/listar_ciudad"/>
            <item android:id="@+id/listarDominio"
                android:icon="@drawable/logo"
                android:title="@string/listar_dominio"/>
        </menu>
    </item>
    <group>
        <item android:id="@+id/salir"
            android:icon="@drawable/logo"
            android:title="@string/salir"/>
    </group>
</menu>